# predict-car-prices

./: .gitignore  Dockerfile  Makefile  README.md  artifacts.dvc  docker-compose.yaml  main.py  mlflow.db  mlflow.db.dvc  mlruns.dvc  pyproject.toml
.gradio/flagged/: dataset1.csv
data/raw/: .gitignore
datasets/mlflow/: .gitignore  artifacts.dvc  database.dvc  mlflow.db.dvc
datasets/raw/: car_price.csv.dvc
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.mlflow  Dockerfile.ui
notebook/: car.ipynb
src/: train.py
src/api/: app.py  schemas.py
src/build_model/: train.py
src/build_model/config/: loader.py
src/build_model/config/configs/: mlflow.yml  model.yml
src/build_model/config/schemas/: app_schema.py  data_schema.py  model_schema.py
src/build_model/data/: preprocessing.py
src/build_model/features/: engineering.py
src/build_model/models/: evaluation.py  factory.py  training.py
src/config/: core.py  loader.py  schema.py
src/config/configs/: data.yml  model.yml
src/config/schemas/: app_schema.py  mlflow_schema.py  model_schema.py
src/configs/: data.yml  model.yml
src/data/: loader.py  preprocessing.py  preprocessor.py  yml_validator.py
src/models/: evaluation.py  evaluator.py  factory.py  predictor.py  promotion.py  registry.py  trainer.py  training.py
src/serving/: inference.py  model_loader.py  schemas.py
src/tracking/: mlflow_tracker.py  mlflow_utils.py  register.py  registry.py  track.py
src/ui/: app.py
src/utils/: helpers.py
